[tool.poetry]
name = "bootcamp-aula06"
version = "0.1.0"
description = ""
authors = ["gabriel faller <faller9712@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^7.0.0"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
